--- a/etc/cas/services/auth.yml
+++ b/etc/cas/services/auth.yml
@@ -1,5 +1,5 @@
 --- !<org.apereo.cas.services.RegexRegisteredService>
-serviceId: "192.168.99.1:8000/auth"
+serviceId: "localhost:8000/auth"
 name: "Pfe auth"
 id: 1000
 description: "description"
